<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:hint="@string/sign_up_page_hint_first_name"
            android:minHeight="88dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="custom"
            app:errorIconDrawable="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_person_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/just"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="0dp"
            android:hint="@string/sign_up_page_hint_e_mail"
            android:minHeight="88dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="custom"
            app:errorIconDrawable="@null"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFirstName"
            app:placeholderText="Address@domain.com"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/just"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="0dp"
            android:hint="@string/sign_up_page_hint_password"
            android:minHeight="88dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/just"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordRequirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutPassword">

            <TextView
                android:id="@+id/checkCharacterLength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_circle_check"
                android:drawablePadding="2dp"
                android:fontFamily="@font/just"
                android:gravity="center_vertical"
                android:text="@string/sign_up_page_check_minimum_6_chars"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/checkSpecialChar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/checkSpecialChar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_circle_check"
                android:drawablePadding="2dp"
                android:fontFamily="@font/just"
                android:gravity="center_vertical"
                android:text="@string/sign_up_page_check_special_character"
                app:layout_constraintLeft_toRightOf="@+id/checkCharacterLength"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/checkLowercase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_circle_check"
                android:drawablePadding="2dp"
                android:fontFamily="@font/just"
                android:gravity="center_vertical"
                android:text="@string/sign_up_page_check_lower_case"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/checkSpecialChar"
                app:layout_constraintTop_toBottomOf="@+id/checkCharacterLength" />

            <TextView
                android:id="@+id/checkDigit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_circle_check"
                android:drawablePadding="2dp"
                android:fontFamily="@font/just"
                android:gravity="center_vertical"
                android:text="@string/sign_up_page_check_digit"
                app:layout_constraintLeft_toRightOf="@+id/checkCharacterLength"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkCharacterLength" />

            <TextView
                android:id="@+id/checkUpperCase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_circle_check"
                android:drawablePadding="2dp"
                android:fontFamily="@font/just"
                android:gravity="center_vertical"
                android:text="@string/sign_up_page_check_upper_case"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/checkSpecialChar"
                app:layout_constraintTop_toBottomOf="@+id/checkLowercase" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:hint="@string/sign_up_page_hint_confirm_password"
            android:minHeight="88dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRequirements"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/just"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/ripple_normal"
            android:text="@string/sign_up_page_button_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword" />

        <View
            android:id="@+id/dummy"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="82dp"
            app:layout_constraintTop_toBottomOf="@id/signUpButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>