...
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/log_in_page_label_welcome_to_quick_code"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintLeft_toLeftOf="@+id/imageLogoQuickCode"
        app:layout_constraintRight_toRightOf="@+id/imageLogoQuickCode"
        app:layout_constraintTop_toBottomOf="@+id/imageLogoQuickCode" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
...
